--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -26,13 +26,17 @@ dist.jar=${dist.dir}/illumina2bam.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.jaxen-1.1.3.jar=lib/jaxen-1.1.3.jar
+file.reference.jdom-1.1.2.jar=lib/jdom-1.1.2.jar
 file.reference.picard-1.52.jar=lib/picard/picard-1.52.jar
 file.reference.sam-1.52.jar=lib/picard/sam-1.52.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.picard-1.52.jar}:\
-    ${file.reference.sam-1.52.jar}
+    ${file.reference.sam-1.52.jar}:\
+    ${file.reference.jdom-1.1.2.jar}:\
+    ${file.reference.jaxen-1.1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
